# EDII

./: CMakeLists.txt  README.md
include/: edii_ipc_common.h  edii_ipc_network.h  edii_ipc_qtdbus.h
include/plugins/: pluginhelpers_p.h  plugininterface.h  threadeddialog.h  uiplugin.h
src/core/: CMakeLists.txt
src/core/src/: dataloader.cpp  dataloader.h  dbusipcproxy.cpp  dbusipcproxy.h  localsocketconnectionhandler.cpp  localsocketconnectionhandler.h  localsocketipcproxy.cpp  main.cpp  uiplugin.cpp
src/core/src/dbus/: DBusInterfaceAdaptor.cpp  DBusInterfaceAdaptor.h  DBusInterfaceInterface.cpp  DBusInterfaceInterface.h  dbusinterface.cpp  dbusinterface.h  dbusinterface.xml
src/plugins/: CMakeLists.txt
src/plugins/ASCSupport/: CMakeLists.txt
src/plugins/ASCSupport/src/: ascsupport.cpp  ascsupport.h  ascsupport_handlers.cpp  ascsupport_handlers.h  availablechannels.cpp  availablechannels.h
src/plugins/ASCSupport/src/ui/: selectsignalsdialog.ui.autosave
src/plugins/CSVSupport/: CMakeLists.txt
src/plugins/CSVSupport/src/: csvfileloader.cpp  csvfileloader.h  csvsupport.cpp  csvsupport.h  csvutil.h  loadcsvfiledialog.cpp  loadcsvfiledialog.h  loadcsvfiledialog.ui  malformedcsvfiledialog.cpp  malformedcsvfiledialog.h  malformedcsvfiledialog.ui
src/plugins/EZChromSupport/: CMakeLists.txt
src/plugins/EZChromSupport/src/: ezchromsupport.cpp  ezchromsupport.h  ezchromsupport_global.h
src/plugins/EZChromSupport/src/ui/: selectchannelsdialog.cpp  selectchannelsdialog.h
src/plugins/HPCSSupport/: CMakeLists.txt
src/plugins/HPCSSupport/src/: chemstationbatchloader.cpp  chemstationbatchloader.h  chemstationfileinfomodel.cpp  chemstationfileloader.cpp  chemstationfileloader.h  hpcssupport.cpp  hpcssupport.h  loadchemstationdatadialog.cpp  loadchemstationdatadialog.h  loadchemstationdatadialog.ui
src/plugins/NetCDFSupport/: CMakeLists.txt
src/plugins/NetCDFSupport/src/: netcdffileloader.cpp  netcdffileloader.h  netcdfsupport.cpp  netcdfsupport.h
